@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.sonarsource.parent</groupId>
     <artifactId>parent</artifactId>
-    <version>31</version>
+    <version>34</version>
   </parent>
   <groupId>org.sonarsource.sonarqube</groupId>
   <artifactId>sonarqube</artifactId>
@@ -74,7 +74,6 @@
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.min.version>3.2</maven.min.version>
-    <jdk.min.version>1.7</jdk.min.version>
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssZ</maven.build.timestamp.format>
     <license.title>SonarQube</license.title>
@@ -83,7 +82,7 @@
     <skipServerTests>false</skipServerTests>
     <skipSanityChecks>false</skipSanityChecks>
 
-    <argLine>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=160m</argLine>
+    <argLine>-Xmx512m -Djava.awt.headless=true</argLine>
     <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
 
     <!-- used for deployment to SonarSource Artifactory -->
@@ -796,12 +795,12 @@
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-core</artifactId>
-        <version>2.0.0</version>
+        <version>3.4.1</version>
       </dependency>
       <dependency>
         <groupId>org.assertj</groupId>
         <artifactId>assertj-guava</artifactId>
-        <version>1.3.1</version>
+        <version>3.0.0</version>
       </dependency>
       <dependency>
         <groupId>xpp3</groupId>
@@ -1134,7 +1133,7 @@
             <artifactId>maven-enforcer-plugin</artifactId>
             <executions>
               <execution>
-                <id>enforce-java7</id>
+                <id>enforce-java8</id>
                 <goals>
                   <goal>enforce</goal>
                 </goals>
@@ -1143,7 +1142,7 @@
                     <requireJavaVersion>
                       <message>To release this project JDK ${jdk.min.version} is required.
                       </message>
-                      <version>[1.7,)</version>
+                      <version>[${jdk.min.version},)</version>
                     </requireJavaVersion>
                   </rules>
                 </configuration>
